Desktop is completed

--- a/grid_css_bem/prepros.config
+++ b/grid_css_bem/prepros.config
@@ -14,7 +14,7 @@
       "afterUpload": false
     },
     "sync": {
-      "enable": true,
+      "enable": false,
       "mouse": true,
       "keyboard": true,
       "form": true,
@@ -67,8 +67,7 @@
           "*.coffee",
           "*.kit",
           "*.turf",
-          "*.ts",
-          "/src/variables.css"
+          "*.ts"
         ],
         "exceptions": []
       }
@@ -930,89 +929,15 @@
     },
     "files": [
       {
-        "file": "assets/Desktop.svg",
+        "file": "scss/mixins.scss",
         "config": {
-          "originalSize": 6711,
-          "optimized": true
+          "autoCompile": false
         }
       },
       {
-        "file": "src/css/desktop.css/desktop.css",
+        "file": "scss/varibles.scss",
         "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": false
-            }
-          },
-          "compileImported": true,
-          "customOutput": "src\\css\\desktop.css\\desktop.css"
-        }
-      },
-      {
-        "file": "src/css/mobile.css/mobile.css",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": false
-            }
-          }
-        }
-      },
-      {
-        "file": "src/mixins.scss",
-        "config": {
-          "tasks": {
-            "autoprefixer": {
-              "enable": false
-            }
-          },
-          "customOutput": "src\\style.scss"
-        }
-      },
-      {
-        "file": "src/scss/desctop.scss/style.scss",
-        "config": {
-          "customOutput": "src\\style.css"
-        }
-      },
-      {
-        "file": "src/scss/mixins.scss",
-        "config": {
-          "customOutput": "src\\scss\\mixins.scss"
-        }
-      },
-      {
-        "file": "src/scss/mobile.scss/style.scss",
-        "config": {
-          "customOutput": "src\\style.css"
-        }
-      },
-      {
-        "file": "src/scss/variables.scss",
-        "config": {
-          "customOutput": "src\\scss\\variables.scss"
-        }
-      },
-      {
-        "file": "src/style.css",
-        "config": {
-          "customOutput": "src\\style.css"
-        }
-      },
-      {
-        "file": "src/variables.css",
-        "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": false
-            }
-          }
-        }
-      },
-      {
-        "file": "src/variables.scss",
-        "config": {
-          "customOutput": "src\\style.scss"
+          "autoCompile": false
         }
       }
     ]
